fixed dropdown positioning on mobile. finally works as it should. need to style it.

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -56,6 +56,7 @@
         width: 50vw;
         margin-top: 50px;
         position: absolute;
+        right: 0;
         
     }
     .navigation{
